Added a purchase activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,11 +65,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".SupplierListActivity" />
         </activity>
-        <activity android:name=".SaleActivity"
+        <activity
+            android:name=".SaleActivity"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" /></activity>
+                android:value=".MainActivity" />
+        </activity>
+        <activity android:name=".PurchaseActivity"></activity>
     </application>
 
 </manifest>
